fixed about image stretch

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -61,7 +61,7 @@
 
     .about__img{
         width: 220px;
-        height: 220px;
+        height: 300px;
     }
     
     .about__info{
